# aoc_2025

./: .gitignore  Cargo.toml  prepare_day.sh
bench_macros/: Cargo.toml
bench_macros/src/: lib.rs
benches/: all_days.rs
char_enum_impl/: Cargo.toml
char_enum_impl/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
