[package]
name = "aoc_2025"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
arr_macro = "0.2.1"
memoize = "0.5.1"
char_enum_impl = {version="0.1.0", path="char_enum_impl"}
utils = {version="0.1.0", path="utils"}
vec3-rs = "0.1.6"
rand = "0.9.2"
regex = "1.12.2"
nom = "8.0.0"
bitvec = "1.0.1"
num-traits = "0.2.19"
catppuccin = "2.6.0"

[workspace]
members = ["char_enum_impl", "bench_macros", "utils"]

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
bench_macros = {version="0.1.0", path="bench_macros"}

[[bench]]
name = "all_days"
harness = false
